<resources>
    <string name="app_name">AttendanceApp</string>
    <string name="spinner_title">Select</string>
    <string name="title_activity_teacher">Teacher Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Profile</string>
    <string name="menu_attendance">Attendance</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_rules">Rules</string>
    <string name="menu_faculty">Faculty</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_student">Student</string>

    <string name="menu_thome">Home</string>
    <string name="menu_tprofile">Profile</string>
    <string name="menu_tattendance">Attendance</string>
    <string name="menu_tstudents">Students</string>
    <string name="menu_treport">Attendance Report</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>