<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/ic_baseline_spellcheck_24"
            android:title="@string/menu_attendance" />
        <item
            android:id="@+id/nav_rules"
            android:icon="@drawable/ic_baseline_format_list_bulleted_24"
            android:title="@string/menu_rules" />
        <item
            android:id="@+id/nav_faculty"
            android:icon="@drawable/ic_baseline_format_list_bulleted_24"
            android:title="@string/menu_faculty" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_keyboard_backspace_24"
            android:title="@string/menu_logout" />
    </group>
</menu>