<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_thome">

    <fragment
        android:id="@+id/nav_thome"
        android:name="com.example.attendanceapp.teachersection.Home.HomeFragment"
        android:label="@string/menu_thome"
        tools:layout="@layout/fragment_teacher_home" >
        <action
            android:id="@+id/action_nav_thome_to_nav_tstudent"
            app:destination="@id/nav_tstudent" />
        <action
            android:id="@+id/action_nav_thome_to_nav_tattendance"
            app:destination="@id/nav_tattendance" />
        <action
            android:id="@+id/action_nav_thome_to_nav_tprofile"
            app:destination="@id/nav_tprofile" />
        <action
            android:id="@+id/action_nav_thome_to_nav_treport"
            app:destination="@id/nav_treport" />
    </fragment>

    <fragment
        android:id="@+id/nav_tprofile"
        android:name="com.example.attendanceapp.teachersection.Profile.ProfileFragment"
        android:label="@string/menu_tprofile"
        tools:layout="@layout/fragment_teacher_profile" />

    <fragment
        android:id="@+id/nav_tattendance"
        android:name="com.example.attendanceapp.teachersection.attendance.AttendanceFragment"
        android:label="@string/menu_tattendance"
        tools:layout="@layout/fragment_teacher_attendance" />

    <fragment
        android:id="@+id/nav_treport"
        android:name="com.example.attendanceapp.teachersection.Report.ReportFragment"
        android:label="@string/menu_treport"
        tools:layout="@layout/fragment_teacher_report" />

    <fragment
        android:id="@+id/nav_tstudent"
        android:name="com.example.attendanceapp.teachersection.students.StudentsFragment"
        android:label="@string/menu_tstudents"
        tools:layout="@layout/fragment_teacher_student" />

</navigation>